--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "facebook-chat-api": "^1.4.0",
     "fs": "0.0.1-security",
     "node-fetch": "^2.0.0",
+    "nodemailer": "^4.6.0",
     "sqlite3": "^3.1.13"
   }
 }
